# para-pencari-nafkah

./: .gitignore  CMakeLists.txt  README.md  buildproject.bat  buildproject.ps1  mingw-toolchain.cmake
.qtcreator/: CMakeLists.txt.user.85230a6  CMakeLists.txt.user.afb3cfa
src/: Qrcodegen.h  historymanager.cpp  historymanager.h  historypage.cpp  historypage.h  main.cpp  mainwindow.cpp  mainwindow.h  menuitem.h  ordermanager.cpp  ordermanager.h  orderpage.cpp  orderpage.h  paymentpage.cpp  paymentpage.h  receiptdialog.cpp  receiptdialog.h  registerpage.cpp  registerpage.h  resource.qrc  strukhttpserver.cpp  strukhttpserver.h  theme.h
